TODO - add more validations
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>